--- a/templates/hotel-results.html
+++ b/templates/hotel-results.html
@@ -273,12 +273,14 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label>Adults</label>
+                        <label>Adults <small style="color:#64748b">(18+)</small></label>
                         <select id="modifyAdults">
                             <option value="1">1 Adult</option>
                             <option value="2" selected>2 Adults</option>
                             <option value="3">3 Adults</option>
                             <option value="4">4 Adults</option>
+                            <option value="5">5 Adults</option>
+                            <option value="6">6 Adults</option>
                         </select>
                     </div>
                 </div>
